# lights-firmware

./: .gitignore  Cargo.toml  README.md  diagram.json  wokwi.sh.example  wokwi.toml
.cargo/: config.toml
.github/workflows/: rust_ci.yml
src/: main.rs
