[package]
name = "lights-firmware"
version = "0.1.0"
authors = ["Ascot"]
edition = "2021"
license = "MIT"

[profile.release]
debug = true

[dependencies]
esp32c3-hal = "0.15.0"
esp-backtrace = { version = "0.11.0", features = ["esp32c3", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.9.0", features = ["esp32c3", "log"] }
log = { version = "0.4.20" }
